<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context=".view.fragment.myprofile.CommentPostMyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/toolbar_comment"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_Post_CV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profileImage_IV"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:src="@drawable/image_profile" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/name_post_TV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/name"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/timestamp_TV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/timestamp" />

                            </LinearLayout>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/postImage_IV"
                            android:layout_width="match_parent"
                            android:layout_height="395dp"
                            android:contentDescription="@string/image_post_cd"
                            android:scaleType="centerCrop"
                            android:src="@drawable/image_blank"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/desc_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/description"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/likeCount_TV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/like_count"
                                android:textColor="@color/black_grey" />

                            <TextView
                                android:id="@+id/commentCount_TV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/comment_count"
                                android:textColor="@color/black_grey" />

                        </LinearLayout>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:background="@color/black_grey" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/unlike_Btn"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/like"
                                android:textColor="@color/black"
                                android:visibility="visible"
                                app:icon="@drawable/ic_like_outline"
                                app:iconTint="@color/black" />

                            <Button
                                android:id="@+id/like_Btn"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/like"
                                android:textColor="@color/orange_main"
                                android:visibility="gone"
                                app:icon="@drawable/ic_like"
                                app:iconTint="@color/orange_main" />

                            <Button
                                android:id="@+id/comment_Btn"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/comment"
                                android:textColor="@color/black"
                                android:visibility="gone"
                                app:icon="@drawable/ic_comment_outline"
                                app:iconTint="@color/black" />

                            <Button
                                android:id="@+id/delete_Btn"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/delete"
                                android:textColor="@color/black"
                                android:visibility="visible"
                                app:icon="@drawable/ic_delete_outline"
                                app:iconTint="@color/black" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/grey_dark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:text="@string/comment"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/grey_dark" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_RV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_post_comment" />

                <TextView
                    android:id="@+id/noComment_TV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/no_comments_yet"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layout_comment_RL"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/grey_light"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/send_Btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_comment"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/send_Btn"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_image_cd"
            android:src="@drawable/ic_send_background"
            app:shapeAppearanceOverlay="@style/circulas" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>