...
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="25dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="1000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/desc_TIET"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="top"
                        android:gravity="top"
                        android:hint="@string/caption"
                        android:inputType="textMultiLine|textCapSentences"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/post_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="25dp"
            android:text="@string/post"
            android:textColor="@color/white"
...
